test/log_eh.txt
***** "e_rt_error.bas"  
nb: error 108 in e_rt_error.bas line 4: can't redefine existing variable, function, subprogram, or label.
x$ = "z" '' type mismatch
***** "e_syntax_errors.bas"  
nb: error 114 in e_syntax_errors.bas line 3: bad argument or operand count.
3443 --
nb: error 105 in e_syntax_errors.bas line 5, column 1: illegal literal.
~~33DWFFD#@FAFG$%#$%>>
nb: error 113 in e_syntax_errors.bas line 7: syntax error.
print ()
nb: error 112 in e_syntax_errors.bas line 9: syntax error (mismatched parentheses).
print (
nb: error 114 in e_syntax_errors.bas line 11, column 9: bad argument or operand count.
print x +
nb: error 127 in e_syntax_errors.bas line 13: IF without ENDIF.
if x
..\src\nb failed returncode 1
